Solve the problem can't jump to payment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,24 +130,15 @@ body {
   margin-bottom: 0px;
   padding: 10px;
 }
-
-
-.cart-info,.applicant-form {
-  background-color: #dadada;
+.cart-info,.applicant-form,.orderinfo-form {
+  background-color: #a0a0a0;
   margin-top:10px;
   margin-bottom: 10px;
-  border-width: 30px;
-  border-color:  #EFEFEF;
-
+  color:white;
 }
 .cart-add-btn{
-  background-color: #dadada;
+  background-color: #a0a0a0;
 }
-
-.orderinfo-form {
-  background-color: #c5e5ec;
-}
-
 .applicant-form-label, .orderinfo-form-label {
   font-weight: 900;
   margin-bottom: 0px;
@@ -157,7 +148,6 @@ body {
   width: 100%;
   height: 25px;
 }
-
 .applicant-form-dropdown {
   width: 50%;
 }
@@ -199,16 +189,16 @@ textarea.orderinfo-form-input {
 }
 .cart-next-btn{
   background: none;
-  border:2px solid #dadada;
+  border:2px solid  #a0a0a0;
   font-family:"Microsoft JhengHei";
   font-size:18px;
   font-weight: 900;
-  color: #dadada;
+  color:  #a0a0a0;
   padding-top:5px;
   padding-bottom: 5px;
 }
 .cart-next-btn:hover{
-  background:blue;
+  background:#00a0ea;
   border:2px solid none;
   font-family:"Microsoft JhengHei";
   font-size:18px;
@@ -216,4 +206,11 @@ textarea.orderinfo-form-input {
   color: white;
   padding-top:5px;
   padding-bottom: 5px;
+}
+.font-stlye{
+  font-family:"Microsoft JhengHei";
+}
+.font-stlye h4{
+  font-family:"Microsoft JhengHei";
+  font-weight:900;
 }
